--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <hr>
 <ul>
     <li><a href="users">Users</a></li>
-    <li><a href="/MealServlet?action=meals">Meals</a></li>
+    <li><a href="MealServlet?action=meals">Meals</a></li>
 </ul>
 </body>
 </html>
